<?xml version="1.0"?>
<package>
  <name>vr_track_alvar</name>
  <version>0.0.0</version>
  <description>The vr_track_alvar package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bucklemp@usc.edu">matt</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

 <build_depend>cmake_modules</build_depend>
 <build_depend>cv_bridge</build_depend>
 <build_depend>geometry_msgs</build_depend>
 <build_depend>image_transport</build_depend>
 <build_depend>message_generation</build_depend>
 <build_depend>pcl_ros</build_depend>
 <build_depend>pcl_conversions</build_depend>
 <build_depend>resource_retriever</build_depend>
 <build_depend>rospy</build_depend>
 <build_depend>roscpp</build_depend>
 <build_depend>sensor_msgs</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>tf</build_depend>
 <build_depend>tf2</build_depend>
 <build_depend>tinyxml</build_depend>
 <build_depend>visualization_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ar_track_alvar</build_depend>

 <run_depend>cv_bridge</run_depend>
 <run_depend>geometry_msgs</run_depend>
 <run_depend>image_transport</run_depend>
 <run_depend>message_runtime</run_depend>
 <run_depend>pcl_ros</run_depend>
 <run_depend>pcl_conversions</run_depend>
 <run_depend>resource_retriever</run_depend>
 <run_depend>rospy</run_depend>
 <run_depend>roscpp</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>gazebo_msgs</run_depend>
 <run_depend>std_msgs</run_depend>
 <run_depend>tf</run_depend>
 <run_depend>tf2</run_depend>
 <run_depend>tinyxml</run_depend>
 <run_depend>visualization_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>ar_track_alvar</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
